# imageAnalysis

./: .gitignore  CMakeLists.txt  README.md
imageAnalysisLib/: CMakeLists.txt  imageAnalysis.cu  imageAnalysis.h
imageAnalysisLib/imageMachineLearningLib/: CMakeLists.txt  imageMachineLearning.cu  imageMachineLearning.h
imageMachineLearningLib/: CMakeLists.txt  imageMachineLearning.cu  imageMachineLearning.h
test/: CMakeLists.txt  input.json  test.cu
test/configs/: average-filter.json  compass-filter.json  dilation.json  erosion.json  gaussian-noise.json  histogram-equalization-config.json  image-quant.json  input.json  kMeans-thresholding.json  knn.json  knnByItself.json  linear-filter.json  median-filter.json  otsu-thresholding.json  salt-and-pepper.json  sobel-filter.json
